--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.11",
     "genkit": "^1.14.1",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.12.5",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "ogl": "^1.0.0",
